--- a/src/main/resources/static/styles/css/admin.css
+++ b/src/main/resources/static/styles/css/admin.css
@@ -3,9 +3,11 @@
 #brandName{
 	color:white;
 	text-transform:uppercase;
+	text-decoration:none;
 }
 .heading{
 	text-transform:uppercase;
+	font-weight:bold;
 	margin-top:20px;
 	margin-bottom:20px;
 }
