added all the features
bug in file upload & edit profile need to add

--- a/src/main/resources/templates/addPoll.html
+++ b/src/main/resources/templates/addPoll.html
@@ -25,6 +25,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/admin/addpoll" id="brandName">Add poll</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/admin/result" id="brandName">Results</a>
+      </li>
     </ul>
   </div>
   <span class="navbar-text" >
