--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -3,65 +3,92 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-<link th:href="@{/styles/css/admin.css}" rel="stylesheet" /></head>
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+	crossorigin="anonymous">
+<link
+	href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+	rel="stylesheet">
+<link th:href="@{/styles/css/admin.css}" rel="stylesheet" />
+</head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-dark">
-  <a class="navbar-brand" href="#" id="brandName">Voting System</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="/" id="brandName">Users <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/admin/addcategory" id="brandName">Add Category</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/admin/addpoll" id="brandName">Add poll</a>
-      </li>
-    </ul>
-  </div>
-  <span class="navbar-text" >
-      <a id="brandName" href="/logout"><i class="fa fa-power-off"></i> Logout</a>
-    </span>
-</nav>
+	<nav class="navbar navbar-expand-lg navbar-light bg-dark">
+		<a class="navbar-brand" href="#" id="brandName">Voting System</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse"
+			data-target="#navbarNav" aria-controls="navbarNav"
+			aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav">
+				<li class="nav-item active"><a class="nav-link" href="/"
+					id="brandName">Users <span class="sr-only">(current)</span></a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/admin/addcategory" id="brandName">Add Category</a></li>
+				<li class="nav-item"><a class="nav-link" href="/admin/addpoll"
+					id="brandName">Add poll</a></li>
+				<li class="nav-item"><a class="nav-link" href="/admin/result"
+					id="brandName">Results</a></li>
+			</ul>
+		</div>
+		<span class="navbar-text"> <a id="brandName" href="/logout"><i
+				class="fa fa-power-off"></i> Logout</a>
+		</span>
+	</nav>
 
-<div class="container">
-	<h1 class="heading text-center">Users</h1>
-	<table class="table table-striped table-hover">
-  <thead>
-    <tr class="bg-info" style="text-align:center">
-      <th scope="col">Name</th>
-      <th scope="col">E-mail</th>
-      <th scope="col">Phone Number</th>
-      <th scope="col">Department</th>
-      <th scope="col">Salary</th>
-      <th scope="col"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <th:block th:each="user : ${users}">
-    <tr style="text-align:center">
-    	<td th:text="${user.name}"></td>
-    	<td th:text="${user.email}"></td>
-    	<td th:text="${user.phone}"></td>
-    	<td th:text="${user.department}"></td>
-    	<td th:text="${user.salary}"></td>
-    	<td></td>
-    </tr>
-    </th:block>
-  </tbody>
-</table>
-</div>
+	<div class="container">
+		<h1 class="heading text-center">Users</h1>
+		
+		
+		<table class="table table-striped table-hover">
+			<thead>
+				<tr class="bg-info" style="text-align: center">
+					<th scope="col">Name</th>
+					<th scope="col">E-mail</th>
+					<th scope="col">Phone Number</th>
+					<th scope="col">Department</th>
+					<th scope="col">Salary</th>
+					<th scope="col"></th>
+				</tr>
+			</thead>
+			<tbody>
+				<th:block th:each="user : ${users}">
+					<tr style="text-align: center">
+						<td th:text="${user.name}"></td>
+						<td th:text="${user.email}"></td>
+						<td th:text="${user.phone}"></td>
+						<td th:text="${user.department}"></td>
+						<td th:text="${user.salary}"></td>
+						<td></td>
+					</tr>
+				</th:block>
+			</tbody>
+		</table>
+
+		<p th:text="${message}" th:if="${message ne null}"
+			class="alert alert-primary"></p>
+		<form class="form-inline" method="post" th:action="@{/admin/upload}"
+			enctype="multipart/form-data">
+			<div class="form-group">
+				<input type="file" name="file" class="form-control-file">
+			</div>
+			<button type="submit" class="btn btn-info">Add Users</button>
+		</form>
+	</div>
 
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+		crossorigin="anonymous"></script>
 </body>
 </html>
