updated edit profile

--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -3,7 +3,7 @@
   xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Online Voting</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel="stylesheet" th:href="@{/styles/css/user.css}">
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -20,7 +20,7 @@
         <a class="nav-link" href="/" id="brandName">POLLS <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" id="brandName">Edit profile</a>
+        <a class="nav-link" href="/user/edit" id="brandName">Edit profile</a>
       </li>
       </ul>
   </div>
