--- a/src/main/resources/templates/votePage.html
+++ b/src/main/resources/templates/votePage.html
@@ -19,7 +19,7 @@
         <a class="nav-link" href="/" id="brandName">POLLS <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" id="brandName">Edit profile</a>
+        <a class="nav-link" href="/user/edit" id="brandName">Edit profile</a>
       </li>
       </ul>
   </div>
